# thermodynamic

./: CMakeCache.txt  CMakeLists.txt  ExpressionBuilder.cpp  ExpressionBuilder.h  FlashCalculation.cpp  FlashCalculation.h  Makefile  MatrixOperations.cpp  MatrixOperations.h  PropertyPackage.cpp  PropertyPackage.h  Solver.cpp  Solver.h  cmake_install.cmake  main.cpp  result
